--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
     <groupId>org.example</groupId>
     <artifactId>middleware_learning</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <!-- 指定仓库-->
+    <repositories>
+        <repository>
+            <id>bigdata-repository</id>
+            <name>bigdata repository</name>
+            <url>http://repo.dev.zichan360.com/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
 
 </project>
