--- a/redis_learn/pom.xml
+++ b/redis_learn/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>redis_learn</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.13.2</version>
+        </dependency>
+    </dependencies>
 
 </project>
