--- a/kafka_learn/pom.xml
+++ b/kafka_learn/pom.xml
@@ -4,12 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>middleware_learning</artifactId>
-        <groupId>org.example</groupId>
+        <groupId>org.valhalla</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kafka_learn</artifactId>
-
-
 </project>
